--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "caniuse-lite": "^1.0.30001521",
     "firebase": "^11.4.0",
     "formik": "^2.2.9",
-    "next": "^15.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^12.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-modal-video": "^1.2.10",
     "react-paginate": "^8.1.3",
